--- a/src/app/absences/components/absences-layout/absences-layout.component.html
+++ b/src/app/absences/components/absences-layout/absences-layout.component.html
@@ -30,12 +30,13 @@
                     </div>
                     <div *ngIf="this.calculateTotalHours(absencesData) > 0">
                         <span class="text-500 z-2 relative">Soit </span>
-                        <span class="text-red-500 font-medium relative z-1">{{ this.calculateTotalHours(absencesData)
-                            }}h</span>
+                        <span class="text-red-500 font-medium relative z-1">{{
+                            this.calculateTotalHoursString(absencesData)
+                            }}</span>
                         <span class="text-500 z-5 relative"> de cours manqués</span>
                     </div>
 
-                    <div class="absolute text-100 z-0" style="top: 32px; right: -32px;">
+                    <div class="absolute z-0" style="top: 32px; right: -32px; color: rgb(239, 244, 255);">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clock z-0"
                             width="128" height="128" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
                             fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -51,7 +52,8 @@
                     <div class="flex justify-content-between mb-3">
                         <div>
                             <span class="block text-500 font-medium mb-3 relative z-1">Absences non justifiées</span>
-                            <div class="text-900 font-medium text-xl relative z-1">1</div>
+                            <div class="text-900 font-medium text-xl relative z-1">{{ getUnjustifiedAbsences().length }}
+                            </div>
                         </div>
                         <!-- <div class="flex align-items-center justify-content-center bg-red-100 border-round"
                             style="width:2.5rem;height:2.5rem">
@@ -59,10 +61,10 @@
                         </div> -->
                     </div>
                     <span class="text-500 z-1 relative">Dont </span>
-                    <span class="text-orange-500 font-medium z-1 relative">1</span>
+                    <span class="text-orange-500 font-medium z-1 relative">0</span>
                     <span class="text-500 z-1 relative"> transmis pour justification</span>
 
-                    <div class="absolute text-100 z-0" style="top: 32px; right: -32px;">
+                    <div class="absolute z-0" style="top: 32px; right: -32px; color: rgb(239, 244, 255);">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-exclamation-circle"
                             width="128" height="128" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
                             fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -79,7 +81,7 @@
                     <div class=" flex justify-content-between mb-3">
                         <div>
                             <span class="block text-500 font-medium mb-3 relative">Absences justifiées</span>
-                            <div class="text-900 font-medium text-xl relative">1</div>
+                            <div class="text-900 font-medium text-xl relative">{{ getJustifiedAbsences().length }}</div>
                         </div>
                         <!-- <div class="flex align-items-center justify-content-center bg-green-100 border-round"
                             style="width:2.5rem;height:2.5rem">
@@ -87,9 +89,9 @@
                         </div> -->
                     </div>
                     <span class="text-500 relative">= </span>
-                    <span class="text-500 relative">2h00</span>
+                    <span class="text-500 relative">{{ calculateTotalJustifiedHours() }}</span>
 
-                    <div class="absolute text-100 z-0" style="top: 32px; right: -32px;">
+                    <div class="absolute z-0" style="top: 32px; right: -32px; color: rgb(239, 244, 255);">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-check"
                             width="128" height="128" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
                             fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -104,9 +106,18 @@
 
         <h3 class="mt-7">Récapitulatif des absences</h3>
         <div class="shadow-1 border-round p-4 pt-2">
-            <div class="flex justify-content-between mt-5 mb-4">
-                <input class="w-full sm:w-full lg:w-3 md:w-3" type="text" pInputText placeholder="Rechercher"
-                    [(ngModel)]="searchText" (ngModelChange)="filterAbsences()" />
+            <div class="flex justify-content-between align-items-center mt-5 mb-4">
+                <span class="p-input-icon-left w-full">
+                    <i class="pi pi-search"></i>
+                    <input class="w-full sm:w-full lg:w-5 md:w-5" type="text" pInputText placeholder="Rechercher"
+                        [(ngModel)]="searchText" (ngModelChange)="filterAbsences()" />
+                </span>
+                <div
+                    class="flex align-items-center justify-content-end w-full hidden sm:hidden lg:flex md:flex onlyJustifiedSwitch">
+                    <p-inputSwitch inputId="onlyUnjustified" [(ngModel)]="onlyUnjustified"
+                        (ngModelChange)="filterAbsences()"></p-inputSwitch>
+                    <label for="onlyUnjustified" class="ml-2 pb-1">Seulement non justifiées</label>
+                </div>
             </div>
 
             <!-- Tableau PrimeNG avec pagination et responsive layout -->
