--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="surface-section w-full md:w-5 p-6 md:p-7">
       <div class="mb-5">
         <img class="logo" src="assets/images/logo-iut-black.png" alt="Image" width="130" class="mb-3">
-        <div class="text-900 text-2xl font-semibold mb-2 mt-3">{{ greeting }},</div>
+        <div class="text-900 text-2xl font-semibold mb-2 mt-3">{{ greeting }}</div>
         <span class="text-600 text-sm font-medium mr-2">Connectez-vous pour accéder à ce service.</span>
       </div>
 
