--- a/src/app/admin/components/students/students.component.scss
+++ b/src/app/admin/components/students/students.component.scss
@@ -1,4 +1,4 @@
-.table-container {
-    min-width: 150%;
-    overflow-y: auto; /* Active la barre de défilement verticale si nécessaire */
+.table-container{
+    min-width:125%;
+    overflow-x: auto; /* Active la barre de défilement verticale si nécessaire */
 }
