--- a/src/app/admin/components/teachers/teachers.component.html
+++ b/src/app/admin/components/teachers/teachers.component.html
@@ -2,7 +2,7 @@
 <p-table #dt2
 [value]="teachers"
 dataKey="id"
-[rows]="10"
+[rows]="7"
 [paginator]="true"
 >
     <!-- Votre en-tête de tableau -->
@@ -16,6 +16,8 @@ dataKey="id"
             <th>Initial</th>
             <th>Bureau</th>
             <th>Admin</th>
+            <th>Modifier</th>
+            <th>Supprimer</th>
         </tr>
 
         <tr>
@@ -41,24 +43,33 @@ dataKey="id"
             <th>
                 <p-columnFilter type="boolean" field="user.isAdmin"></p-columnFilter>
             </th>
+            <th></th>
+            <th></th>
             
         </tr>
     </ng-template>
     <!-- Corps du tableau -->
     <ng-template pTemplate="body" let-teacher>
         <tr>
-            <td>{{ teacher.personal_info.id }}</td>
-            <td>{{ teacher.user.username }}</td>
-            <td>{{ teacher.user.first_name }}</td>
-            <td>{{ teacher.user.last_name }}</td>
+            <td >{{ teacher.personal_info.id }}</td>
+            <td>{{ teacher.user.username}}</td>
+            <td>{{ teacher.user.first_name.length > 15 ?  (teacher.user.first_name.slice(0, 15)| titlecase) + '...' : teacher.user.first_name| titlecase}}</td>
+            <td>{{ teacher.user.last_name.length > 15 ?  (teacher.user.last_name.slice(0, 15)| titlecase) + '...' : teacher.user.last_name| titlecase }}</td>
             <td>{{ teacher.user.email }}</td>
-            <td>{{ teacher.personal_info.initial }}</td>
-            <td>{{ teacher.personal_info.desktop  }}</td>
+            <td>{{ teacher.personal_info.initial.length > 6 ?  teacher.personal_info.initial.slice(0, 6) + '...' : teacher.personal_info.initial }}</td>
+            <td>{{ teacher.personal_info.desktop.length > 15 ?  teacher.personal_info.desktop.slice(0, 15) + '...' : teacher.personal_info.desktop  }}</td>
             <td>
                 <i class="pi"
                     [ngClass]="{ 'pi-check-circle': teacher.user.isAdmin, 'pi-times-circle': !teacher.user.isAdmin }"
                     [ngStyle]="{ 'color': teacher.user.isAdmin ? 'green' : 'red' }"></i>
             </td>
+            <td><p-button icon="pi pi-user-edit" [rounded]="true" [text]="true" severity="info "  ></p-button></td>
+            <td><p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger"  ></p-button></td>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <tr>
+            <td colspan="10">Aucun enseignant trouvé.</td>
         </tr>
     </ng-template>
 </p-table>
