--- a/src/app/admin/components/users/users.component.html
+++ b/src/app/admin/components/users/users.component.html
@@ -4,7 +4,7 @@
     #dt2
     [value]="users"
     dataKey="id"
-    [rows]="10"
+    [rows]="7"
     [paginator]="true"
 >
 <ng-template pTemplate="header">
@@ -14,7 +14,7 @@
         <th >Prénom</th>
         <th >Nom</th>
         <th >Email</th>
-        <th >Role</th>
+        <th >Rôle</th>
         <th >Admin</th>
         <th >Modifier</th>
         <th >Supprimer</th>
@@ -48,8 +48,8 @@
     <tr>
         <td>{{ user.id }}</td>
         <td>{{ user.username }}</td>
-        <td>{{ user.first_name }}</td>
-        <td>{{ user.last_name }}</td>
+        <td>{{ user.first_name.length > 15 ?  (user.first_name.slice(0, 15)| titlecase) + '...' : user.first_name| titlecase}}</td>
+        <td>{{ user.last_name.length > 15 ?  (user.last_name.slice(0, 15)| titlecase) + '...' : user.last_name| titlecase}}</td>
         <td>{{ user.email }}</td>
         <td>{{ user.role.name }}</td>
         <td>
@@ -69,7 +69,7 @@
 
 <ng-template pTemplate="emptymessage">
     <tr>
-        <td colspan="6">Aucun utilisateur trouvé.</td>
+        <td colspan="9">Aucun utilisateur trouvé.</td>
     </tr>
     
 </ng-template>
@@ -130,9 +130,6 @@
                         <p class="text-sm text-red-500 font-semibold">{{ ErrorMessage }}</p>
                     </div>
         
-                    <div *ngIf="UserModifiedMessage" class="login-status mb-5 w-full">
-                        <p class="text-sm text-green-500 font-semibold">{{ UserModifiedMessage }}</p>
-                    </div>
                 </div>
         
             </div>
