--- a/src/app/absences/components/justify-absence/justify-absence.component.html
+++ b/src/app/absences/components/justify-absence/justify-absence.component.html
@@ -23,7 +23,7 @@
                 <input class="mt-1" type="text" id="reason" [(ngModel)]="justificationReason" pInputText />
             </div>
             <div class="p-field">
-                <label for="justifyFile" class="font-medium text-900">Fichier justificatif</label>
+                <label for="justifyFile" class="font-medium text-900">Document justificatif</label>
                 <div class="mt-1">
                 </div>
                 <p-fileUpload class="mt-1 w-full" id="justifyFile" mode="basic" chooseLabel="Sélectionner un fichier"
