--- a/src/app/admin/components/users/users.component.html
+++ b/src/app/admin/components/users/users.component.html
@@ -58,9 +58,9 @@
             [ngStyle]="{ 'color': user.isAdmin ? 'green' : 'red' }">
             </i>
         </td>
-        <td><p-button icon="pi pi-user-edit" [rounded]="true" [text]="true" severity="info " (click)="openModal(user)" ></p-button></td>
+        <td><p-button icon="pi pi-user-edit" [rounded]="true" [text]="true" severity="info " (click)="openModalUpdate(user)" ></p-button></td>
         
-        <td><p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger "></p-button></td>
+        <td><p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger " (click)="openModalDelete(user)"></p-button></td>
     </tr>
    
 
@@ -80,7 +80,7 @@
 
 
 <div *ngIf="userModal" >
-    <p-dialog header="Modifier cette utilisateur" [(visible)]="displayModal" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+    <p-dialog header="Modifier cette utilisateur" [(visible)]="displayModalUpdate" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
 
 
         <!--------------------------------->
@@ -138,9 +138,26 @@
 
 
     </p-dialog>
+
 </div>
 
 
+
+
+
+
+
+<p-dialog header="Supprimer un utilisateur" [(visible)]="displayModalDelete" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false" [contentStyle]="{ 'text-align': 'center' }">
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%;">
+      <p>Supprimer l'utilisateur <span [style.fontWeight]="'bold'">{{ username }}</span></p>
+      <div style="margin-top: 2%">
+        <p-button label="Annuler" [rounded]="true" severity="secondary" icon="pi pi-times" [style]="{ 'margin-right.px': 10 } " (click)="closeModalDelete()"></p-button>
+        <p-button label="Supprimer" [rounded]="true" severity="danger" icon="pi pi-trash" (click)="deleteUser()"></p-button>
+        <p class="text-sm text-red-500 font-semibold">{{ ErrorMessage }}</p>
+      </div>
+    </div>
+  </p-dialog>
+  
 
 
 
