--- a/src/app/admin/components/teachers/teachers.component.html
+++ b/src/app/admin/components/teachers/teachers.component.html
@@ -64,7 +64,7 @@ dataKey="id"
                     [ngStyle]="{ 'color': teacher.user.isAdmin ? 'green' : 'red' }"></i>
             </td>
             <td><p-button icon="pi pi-user-edit" [rounded]="true" [text]="true" severity="info" (click) ="openModal(teacher)"  ></p-button></td>
-            <td><p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger"  ></p-button></td>
+            <td><p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (click) ="openModalDelete(teacher)"  ></p-button></td>
         </tr>
     </ng-template>
     <ng-template pTemplate="emptymessage">
@@ -144,3 +144,15 @@ dataKey="id"
 
     </p-dialog>
 </div>
+
+
+<p-dialog header="Supprimer un enseignant" [(visible)]="displayModalDelete" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false" [contentStyle]="{ 'text-align': 'center' }">
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%;">
+      <p>Supprimer l'enseignant <span [style.fontWeight]="'bold'">{{ username }}</span></p>
+      <div style="margin-top: 2%">
+        <p-button label="Annuler" [rounded]="true" severity="secondary" icon="pi pi-times" [style]="{ 'margin-right.px': 10 } " (click)="closeModalDelete()"></p-button>
+        <p-button label="Supprimer" [rounded]="true" severity="danger" icon="pi pi-trash" (click)="deleteTeacher()"></p-button>
+        <p class="text-sm text-red-500 font-semibold">{{ ErrorMessage }}</p>
+      </div>
+    </div>
+  </p-dialog>
